--- a/test/resultados/report.html
+++ b/test/resultados/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,38513],[],[[5,0,1,6,[],[1,328,38185],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,4,[],[1,0,43271],[],[[5,0,1,6,[7],[1,331,42940],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Test_detram\\test\\test.robot","*../test.robot","*<p>Casos de Prueba CC-04-2019-AMTIF-OT04\x3c/p>","*CC001 TRAMITES-0T4 (TRAMITES 018 A)","*<p>PRUEBA TRAMITE 018 A\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Test_detram\\test\\test.robot","*../test.robot","*<p>Casos de Prueba CC-04-2019-AMTIF-OT04\x3c/p>","*CC001 TRAMITES-0T4 (TRAMITES 018 A)","*<p>PRUEBA TRAMITE 018 A\x3c/p>","*tg01"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:38","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:38","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:39","fail":0,"id":"s1","label":"Test","name":"Test","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:43","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:43","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:43","fail":0,"label":"tg01","pass":1}],[{"elapsed":"00:00:43","fail":0,"id":"s1","label":"Test","name":"Test","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1579910394210;
+window.output["baseMillis"] = 1580151901148;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 38544;
+window.output["generated"] = 43326;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
