--- a/test/resultados/report.html
+++ b/test/resultados/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,50019],[],[[5,0,1,6,[7],[1,657,24842],[]],[8,0,1,6,[9],[1,25499,24515],[]]],[],[2,2,2,2]];
+window.output["suite"] = [1,2,3,4,[],[1,0,128357],[],[[5,0,1,6,[7],[1,700,127655],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Test_detram\\test\\test.robot","*../test.robot","*<p>Casos de Prueba CC-04-2019-AMTIF-OT04\x3c/p>","*CC001 TRAMITES-0T07 (TRAMITES OTO7)(CHROME REASIGNACIÓN DE DICTAMEN)","*<p>TRAMITES OTO7 REASIGNACIÓN DE DICTAMEN\x3c/p>","*rd01","*CC002 TRAMITES-0T07 (TRAMITES OTO7)(CHROME REASIGNACIÓN DE DICTAMEN)","*rd02"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test If","*C:\\Test_detram\\test\\test_if.robot","*../test_if.robot","*<p>Casos de Prueba CC-04-2019-AMTIF-OT04\x3c/p>","*CC010 TRAMITES-0T4 (TRAMITES 018 A)(CHROME DATOS FIRMA ELECTRONICA)","*<p>PRUEBA TRAMITE 018 A DATOS FIRMA ELECTRONICA\x3c/p>","*tg10"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:49","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:49","fail":0,"label":"All Tests","pass":2}],[{"elapsed":"00:00:25","fail":0,"label":"rd01","pass":1},{"elapsed":"00:00:25","fail":0,"label":"rd02","pass":1}],[{"elapsed":"00:00:50","fail":0,"id":"s1","label":"Test","name":"Test","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:02:08","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:02:08","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:02:08","fail":0,"label":"tg10","pass":1}],[{"elapsed":"00:02:08","fail":0,"id":"s1","label":"Test If","name":"Test If","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1582919735316;
+window.output["baseMillis"] = 1583440138063;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 50069;
+window.output["generated"] = 128432;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
