--- a/test/resultados/report.html
+++ b/test/resultados/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,128357],[],[[5,0,1,6,[7],[1,700,127655],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,4,[],[0,0,215008],[],[[5,0,1,6,[7],[0,717,214289,8],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test If","*C:\\Test_detram\\test\\test_if.robot","*../test_if.robot","*<p>Casos de Prueba CC-04-2019-AMTIF-OT04\x3c/p>","*CC010 TRAMITES-0T4 (TRAMITES 018 A)(CHROME DATOS FIRMA ELECTRONICA)","*<p>PRUEBA TRAMITE 018 A DATOS FIRMA ELECTRONICA\x3c/p>","*tg10"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test If","*C:\\Test_detram\\test\\test_if.robot","*../test_if.robot","*<p>Casos de Prueba CC-04-2019-AMTIF-OT04\x3c/p>","*CC011 TRAMITES-0T4 (TRAMITES 018 A)(CHROME MULTIPLES TEST)","*<p>PRUEBA TRAMITE 018 A MULTIPLES TEST\x3c/p>","*tg11","*ValueError: I/O operation on closed file."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:02:08","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:02:08","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:02:08","fail":0,"label":"tg10","pass":1}],[{"elapsed":"00:02:08","fail":0,"id":"s1","label":"Test If","name":"Test If","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:03:34","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:03:34","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:03:34","fail":1,"label":"tg11","pass":0}],[{"elapsed":"00:03:35","fail":1,"id":"s1","label":"Test If","name":"Test If","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1583440138063;
+window.output["baseMillis"] = 1583452892688;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 128432;
+window.output["generated"] = 215127;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
